// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Deployment List Detail> should fill reject form and submit 1`] = `
"<Provider store={{...}}>
  <BrowserRouter>
    <Router history={{...}}>
      <DeploymentListDetail deploymentDetails={{...}} addSuccessToast={[Function: mockConstructor]} updateDeploymentDetails={[Function: mockConstructor]} handleDeploymentInprogressValidation={[Function: mockConstructor]}>
        <div className=\\"fe_u_padding--large\\">
          <AccordionItem headingText=\\"\\" padded={false} defaultExpanded={true} onExpandedChange={[Function: onExpandedChange]} headingTag=\\"h3\\" mountedWhileHidden={false} tabIndex={0}>
            <ListItem className=\\"fe_c_accordion-item fe_is-expanded\\">
              <li className=\\"fe_c_list__item fe_c_accordion-item fe_is-expanded\\">
                <div className=\\"fe_c_accordion-item__header fe_is-expanded\\" onClick={[Function: bound toggleExpand]} onKeyDown={[Function: onKeyDown]} aria-expanded={true} role=\\"button\\" tabIndex={0}>
                  <Icon icon=\\"Expand\\" title=\\"Collapse\\" aria-hidden=\\"true\\" focusable=\\"false\\" className=\\"fe_c_accordion-item__expand fe_is-expanded\\" iconSet={{...}}>
                    <Expand title=\\"Collapse\\" aria-hidden=\\"true\\" focusable=\\"false\\" className=\\"fe_c_accordion-item__expand fe_is-expanded\\">
                      <IconBase viewBox=\\"0 0 25 25\\" title=\\"Collapse\\" aria-hidden=\\"true\\" focusable=\\"false\\" className=\\"fe_c_accordion-item__expand fe_is-expanded\\">
                        <svg xmlns=\\"http://www.w3.org/2000/svg\\" aria-hidden=\\"true\\" focusable=\\"false\\" className=\\"fe_c_icon fe_c_accordion-item__expand fe_is-expanded\\" viewBox=\\"0 0 25 25\\" style={{...}}>
                          <title>
                            Collapse
                          </title>
                          <g>
                            <g className=\\"fe_c_icon__background\\">
                              <rect width=\\"25\\" height=\\"25\\" />
                            </g>
                            <g className=\\"fe_c_icon__icon fe_c_icon__icon--primary\\">
                              <polygon points=\\"12.5 16.6 6 10 7 9 12.5 14.4 18 9 19 10 12.5 16.6\\" />
                            </g>
                          </g>
                        </svg>
                      </IconBase>
                    </Expand>
                  </Icon>
                  <AccordionItemHeader>
                    <div className=\\"fe_c_accordion-item__header-content\\">
                      <div className=\\"custom-accordion-header\\">
                        <div className=\\"deployment-id\\">
                          <span className=\\"deployment-id-field\\">
                            <Link className=\\"deployment-id-link\\" to=\\"/collector/workflowtool/deployments/1\\">
                              <LinkAnchor className=\\"deployment-id-link\\" href=\\"/collector/workflowtool/deployments/1\\" navigate={[Function: navigate]}>
                                <a className=\\"deployment-id-link\\" href=\\"/collector/workflowtool/deployments/1\\" onClick={[Function: onClick]}>
                                  D-1
                                </a>
                              </LinkAnchor>
                            </Link>
                          </span>
                        </div>
                        <div className=\\"status\\">
                          <span>
                            <StatusTag className=\\" status_nowrap_no_transform status_3\\" text=\\"IN PROGRESS\\" secondary={false} color=\\"gray\\">
                              <span className=\\"fe_c_status-tag  status_nowrap_no_transform status_3 fe_c_status-tag--gray\\">
                                IN PROGRESS
                              </span>
                            </StatusTag>
                          </span>
                        </div>
                        <div className=\\"release-version\\">
                          2.0.2
                        </div>
                        <div className=\\"released-date\\">
                          03/21/2021
                        </div>
                        <div className=\\"released-by\\">
                          jcyril
                        </div>
                      </div>
                    </div>
                  </AccordionItemHeader>
                </div>
                <div className=\\"fe_c_accordion-item__content fe_is-expanded\\">
                  <CSSTransition in={true} classNames=\\"fe_is-expanding\\" timeout={400} onEnter={[Function: bound handleEnter]} onEntering={[Function: handleEntering]} onEntered={[Function: handleEntered]} onExit={[Function: handleExit]} onExiting={[Function: handleExiting]} onExited={[Function: bound handleExited]} mountOnEnter={true} unmountOnExit={true}>
                    <Transition in={true} timeout={400} onEnter={[Function (anonymous)]} onEntering={[Function (anonymous)]} onEntered={[Function (anonymous)]} onExit={[Function (anonymous)]} onExiting={[Function (anonymous)]} onExited={[Function (anonymous)]} mountOnEnter={true} unmountOnExit={true} appear={false} enter={true} exit={true}>
                      <div className=\\"fe_c_accordion-item__content-inner\\" style={{...}}>
                        <div className=\\"deployment-content\\">
                          <div className=\\"environment-layout\\">
                            <div>
                              <ul className=\\"environment-container\\">
                                <li className=\\"environment-section\\">
                                  <div className=\\"environment-name\\">
                                    Environment
                                    : 
                                    Prod-Mirror
                                  </div>
                                  <div className=\\"rule-app-version\\">
                                    Rule App version
                                    : 
                                    1.293
                                  </div>
                                </li>
                                <li className=\\"environment-section\\">
                                  <div className=\\"environment-name\\">
                                    Environment
                                    : 
                                    Prod-East
                                  </div>
                                  <div className=\\"rule-app-version\\">
                                    Rule App version
                                    : 
                                    1.294
                                  </div>
                                </li>
                                <li className=\\"environment-section\\">
                                  <div className=\\"environment-name\\">
                                    Environment
                                    : 
                                    Prod-West
                                  </div>
                                  <div className=\\"rule-app-version\\">
                                    Rule App version
                                    : 
                                    1.295
                                  </div>
                                </li>
                              </ul>
                            </div>
                            <div id=\\"button-container\\" className=\\"button-container\\">
                              <RejectDeployment onReject={[Function (anonymous)]}>
                                <ForwardRef className=\\"fe_u_margin--right-xsmall\\" id=\\"reject-deployment\\" text=\\"Reject\\" onClick={[Function (anonymous)]} variant=\\"primary\\" disabled={false} fullWidth={false} iconSet={{...}} size=\\"medium\\" showLoadingSpinner={false} type=\\"button\\" useLink={false}>
                                  <button id=\\"reject-deployment\\" className=\\"fe_c_button fe_c_button--primary fe_c_button--medium fe_u_margin--right-xsmall\\" aria-disabled={false} aria-label={[undefined]} onClick={[Function: handleClick]} type=\\"button\\">
                                    <div className=\\"fe_c_button__content\\">
                                      <span className=\\"fe_c_button__text fe_c_button__text--medium fe_c_button__text--primary\\">
                                        Reject
                                      </span>
                                    </div>
                                  </button>
                                </ForwardRef>
                                <Formik initialValues={{...}} validationSchema={[Function: validationSchema]} onSubmit={[Function (anonymous)]} validateOnChange={false} validateOnBlur={false} validateOnMount={false}>
                                  <ThemeConsumerHOC show={true} hideDividers={true} headerText=\\"Reject Deployment\\" disableClose={true} width=\\"large\\" className=\\"my-custom-lightbox deployment-reject\\">
                                    <Lightbox show={true} hideDividers={true} headerText=\\"Reject Deployment\\" disableClose={true} width=\\"large\\" className=\\"my-custom-lightbox deployment-reject\\" theme={{...}} closeButtonAriaLabel=\\"Close Modal\\" includeButtonRow={false} primaryButtonText=\\"Next\\" padded={true}>
                                      <ModalManagerWrapper className=\\"fe_c_lightbox fe_f_all my-custom-lightbox deployment-reject\\" dialogClass={{...}} onHide={[Function: handleOnHide]} aria-label=\\"Reject Deployment\\" show={true}>
                                        <Overlay manager={{...}} className=\\"fe_c_lightbox fe_f_all my-custom-lightbox deployment-reject\\" dialogClass={{...}} onHide={[Function: handleOnHide]} aria-label=\\"Reject Deployment\\" show={true} autoFocus={false} enforceFocus={false}>
                                          <Modal aria-modal=\\"true\\" aria-labelledby={[undefined]} aria-describedby={[undefined]} renderBackdrop={[Function: renderBackdrop]} transition={[Function: FadeUp]} backdropTransition={[Function: Fade]} manager={{...}} onShow={[Function (anonymous)]} onHide={[Function: handleOnHide]} aria-label=\\"Reject Deployment\\" show={true} autoFocus={false} enforceFocus={false} className=\\"fe_c_overlay fe_f_all fe_c_lightbox fe_f_all my-custom-lightbox deployment-reject\\" role=\\"dialog\\" backdrop={true} keyboard={true} restoreFocus={true}>
                                            <Portal container={[undefined]} onRendered={[Function (anonymous)]}>
                                              <WaitForContainer container={[undefined]} onContainerResolved={[Function (anonymous)]}>
                                                <Portal containerInfo={{...}}>
                                                  <Fade appear={true} in={true}>
                                                    <CSSTransition timeout={400} classNames=\\"fade\\" appear={true} in={true}>
                                                      <Transition timeout={400} appear={true} in={true} onEnter={[Function (anonymous)]} onEntered={[Function (anonymous)]} onEntering={[Function (anonymous)]} onExit={[Function (anonymous)]} onExiting={[Function (anonymous)]} onExited={[Function (anonymous)]} mountOnEnter={false} unmountOnExit={false} enter={true} exit={true}>
                                                        <div className=\\"fe_c_overlay__blocker \\" onClick={[Function (anonymous)]} />
                                                      </Transition>
                                                    </CSSTransition>
                                                  </Fade>
                                                  <FadeUp appear={true} unmountOnExit={true} in={true} onExit={[undefined]} onExiting={[undefined]} onExited={[Function (anonymous)]} onEnter={[undefined]} onEntering={[undefined]} onEntered={[undefined]}>
                                                    <CSSTransition timeout={400} classNames=\\"fade-up\\" appear={true} unmountOnExit={true} in={true} onExit={[undefined]} onExiting={[undefined]} onExited={[Function (anonymous)]} onEnter={[undefined]} onEntering={[undefined]} onEntered={[undefined]}>
                                                      <Transition timeout={400} appear={true} unmountOnExit={true} in={true} onExit={[Function (anonymous)]} onExiting={[Function (anonymous)]} onExited={[Function (anonymous)]} onEnter={[Function (anonymous)]} onEntering={[Function (anonymous)]} onEntered={[Function (anonymous)]} mountOnEnter={false} enter={true} exit={true}>
                                                        <div role=\\"dialog\\" aria-modal=\\"true\\" aria-labelledby={[undefined]} aria-describedby={[undefined]} aria-label=\\"Reject Deployment\\" style={[undefined]} className=\\"fe_c_overlay fe_f_all fe_c_lightbox fe_f_all my-custom-lightbox deployment-reject\\" tabIndex=\\"-1\\">
                                                          <div className=\\"fe_c_overlay__dialog fe_c_lightbox__dialog fe_c_lightbox__dialog--large fe_c_lightbox__dialog--without-dividers\\" role=\\"document\\">
                                                            <div className=\\"fe_c_lightbox__header\\">
                                                              <Heading text=\\"Reject Deployment\\" headingTag=\\"h1\\" variant=\\"section\\">
                                                                <h1 className=\\"fe_c_heading fe_c_heading--section\\">
                                                                  Reject Deployment
                                                                </h1>
                                                              </Heading>
                                                            </div>
                                                            <div className=\\"fe_c_lightbox__body fe_c_lightbox__body--padded\\">
                                                              <ForwardRef variant=\\"tertiary\\" icon=\\"Close\\" onClick={[Function (anonymous)]} className=\\"my-close-button\\" disabled={false} fullWidth={false} iconSet={{...}} size=\\"medium\\" showLoadingSpinner={false} type=\\"button\\" useLink={false}>
                                                                <button className=\\"fe_c_button fe_c_button--tertiary fe_c_button--medium my-close-button\\" aria-disabled={false} aria-label=\\"Close\\" onClick={[Function: handleClick]} type=\\"button\\">
                                                                  <div className=\\"fe_c_button__content\\">
                                                                    <Close title={{...}} disabled={false} className=\\"fe_c_button__icon fe_c_button__icon--tertiary\\">
                                                                      <IconBase viewBox=\\"0 0 25 25\\" title={{...}} disabled={false} className=\\"fe_c_button__icon fe_c_button__icon--tertiary fe_c_icon--close\\">
                                                                        <svg xmlns=\\"http://www.w3.org/2000/svg\\" className=\\"fe_c_icon fe_c_button__icon fe_c_button__icon--tertiary fe_c_icon--close\\" viewBox=\\"0 0 25 25\\" style={{...}}>
                                                                          <g>
                                                                            <g className=\\"fe_c_icon__background\\">
                                                                              <rect width=\\"25\\" height=\\"25\\" />
                                                                            </g>
                                                                            <g className=\\"fe_c_icon__icon fe_c_icon__icon--primary\\">
                                                                              <rect x=\\"4\\" y=\\"11.8\\" width=\\"17\\" height=\\"1.5\\" transform=\\"translate(-5.2 12.5) rotate(-45)\\" />
                                                                              <rect x=\\"11.8\\" y=\\"4\\" width=\\"1.5\\" height=\\"16.97\\" transform=\\"translate(-5.2 12.5) rotate(-45)\\" />
                                                                            </g>
                                                                          </g>
                                                                        </svg>
                                                                      </IconBase>
                                                                    </Close>
                                                                  </div>
                                                                </button>
                                                              </ForwardRef>
                                                              <Form labelAlwaysAbove={true} includeSubmitButton={false} buttonText=\\"Submit\\" noValidate={true} requiredVariation=\\"blueBarWithRequiredLabel\\" layout=\\"medium\\" nested={true} labelWidth={3}>
                                                                <form onSubmit={[undefined]} noValidate={true}>
                                                                  <GridRow>
                                                                    <div className=\\"fe_l_grid-row\\">
                                                                      <GridCol>
                                                                        <div className=\\"fe_l_grid-row__col\\">
                                                                          <FormField maxlength=\\"4000\\" labelText=\\"Reason\\" inputAs={{...}} name=\\"reason\\" value=\\"areason\\" onChange={[Function (anonymous)]} onBlur={[Function (anonymous)]} error={[undefined]} id=\\"reason\\" labelWidth={12} required={true}>
                                                                            <FormFieldLayout labelWidth={12} nested={[undefined]} layout={[undefined]} statusExtras={[undefined]} className=\\"\\" labelAlwaysAbove={[undefined]} labelSlot={{...}} messageSlot={[undefined]} statusIndicatorSlot={[undefined]} inputSlot={{...}}>
                                                                              <div className=\\"fe_c_form-field fe_c_form-field--medium\\">
                                                                                <GridRow nested={true}>
                                                                                  <div className=\\"fe_l_grid-row fe_l_grid-row--nested\\">
                                                                                    <GridCol width={{...}} className=\\"fe_c_form-field__label fe_c_form-field__label--forced-above\\">
                                                                                      <div className=\\"fe_l_grid-row__col fe_l_grid-row__col--small-12 fe_l_grid-row__col--medium-12 fe_c_form-field__label fe_c_form-field__label--forced-above\\">
                                                                                        <Label id=\\"reason-label\\" htmlFor=\\"reason\\" text=\\"Reason\\" disabled={[undefined]} required={true} useLegend={false}>
                                                                                          <label htmlFor=\\"reason\\" id=\\"reason-label\\" className=\\"fe_c_label\\">
                                                                                            Reason
                                                                                            <span className=\\"fe_c_label__required\\" aria-hidden=\\"true\\">
                                                                                               
                                                                                              - Required
                                                                                            </span>
                                                                                          </label>
                                                                                        </Label>
                                                                                      </div>
                                                                                    </GridCol>
                                                                                    <GridCol width={{...}} className=\\"fe_c_form-field__right fe_c_form-field__right--label-forced-above\\">
                                                                                      <div className=\\"fe_l_grid-row__col fe_l_grid-row__col--small-12 fe_l_grid-row__col--medium-0 fe_c_form-field__right fe_c_form-field__right--label-forced-above\\">
                                                                                        <div className=\\"fe_c_form-field__input-slot\\">
                                                                                          <ForwardRef(Textarea) maxlength=\\"4000\\" value=\\"areason\\" onChange={[Function (anonymous)]} onBlur={[Function (anonymous)]} className=\\"fe_c_form-field__input\\" id=\\"reason\\" name=\\"reason\\" required={true} hideRequiredStyles={false} disabled={[undefined]} error={[undefined]} aria-labelledby=\\"reason-label\\">
                                                                                            <Textarea maxlength=\\"4000\\" value=\\"areason\\" onChange={[Function (anonymous)]} onBlur={[Function (anonymous)]} className=\\"fe_c_form-field__input\\" id=\\"reason\\" name=\\"reason\\" required={true} hideRequiredStyles={false} disabled={false} error={[undefined]} aria-labelledby=\\"reason-label\\" forwardedRef={{...}}>
                                                                                              <textarea maxlength=\\"4000\\" value=\\"areason\\" onChange={[Function: bound onChange]} onBlur={[Function: bound onBlur]} id=\\"reason\\" name=\\"reason\\" aria-labelledby=\\"reason-label\\" disabled={false} required={true} className=\\"fe_c_textarea fe_c_textarea--auto-size fe_is-required fe_c_form-field__input\\" style={{...}} />
                                                                                            </Textarea>
                                                                                          </ForwardRef(Textarea)>
                                                                                        </div>
                                                                                        <div className=\\"fe_c_form-field__status\\" />
                                                                                      </div>
                                                                                    </GridCol>
                                                                                  </div>
                                                                                </GridRow>
                                                                              </div>
                                                                            </FormFieldLayout>
                                                                          </FormField>
                                                                        </div>
                                                                      </GridCol>
                                                                    </div>
                                                                  </GridRow>
                                                                </form>
                                                              </Form>
                                                              <div className=\\"fe_c_lightbox__footer\\">
                                                                <ForwardRef text=\\"Cancel\\" variant=\\"secondary\\" className=\\"fe_u_margin--right-small\\" onClick={[Function (anonymous)]} disabled={false} fullWidth={false} iconSet={{...}} size=\\"medium\\" showLoadingSpinner={false} type=\\"button\\" useLink={false}>
                                                                  <button className=\\"fe_c_button fe_c_button--secondary fe_c_button--medium fe_u_margin--right-small\\" aria-disabled={false} aria-label={[undefined]} onClick={[Function: handleClick]} type=\\"button\\">
                                                                    <div className=\\"fe_c_button__content\\">
                                                                      <span className=\\"fe_c_button__text fe_c_button__text--medium fe_c_button__text--secondary\\">
                                                                        Cancel
                                                                      </span>
                                                                    </div>
                                                                  </button>
                                                                </ForwardRef>
                                                                <ForwardRef text=\\"Reject\\" onClick={[Function (anonymous)]} variant=\\"primary\\" disabled={false} fullWidth={false} iconSet={{...}} size=\\"medium\\" showLoadingSpinner={false} type=\\"button\\" useLink={false}>
                                                                  <button className=\\"fe_c_button fe_c_button--primary fe_c_button--medium\\" aria-disabled={false} aria-label={[undefined]} onClick={[Function: handleClick]} type=\\"button\\">
                                                                    <div className=\\"fe_c_button__content\\">
                                                                      <span className=\\"fe_c_button__text fe_c_button__text--medium fe_c_button__text--primary\\">
                                                                        Reject
                                                                      </span>
                                                                    </div>
                                                                  </button>
                                                                </ForwardRef>
                                                              </div>
                                                            </div>
                                                          </div>
                                                        </div>
                                                      </Transition>
                                                    </CSSTransition>
                                                  </FadeUp>
                                                </Portal>
                                              </WaitForContainer>
                                            </Portal>
                                          </Modal>
                                        </Overlay>
                                      </ModalManagerWrapper>
                                    </Lightbox>
                                  </ThemeConsumerHOC>
                                </Formik>
                              </RejectDeployment>
                              <SignoffDeployment deployResponse={{...}} onSignoff={[Function (anonymous)]}>
                                <ForwardRef id=\\"signoff-deployment\\" text=\\"Verify\\" onClick={[Function (anonymous)]} variant=\\"primary\\" disabled={false} fullWidth={false} iconSet={{...}} size=\\"medium\\" showLoadingSpinner={false} type=\\"button\\" useLink={false}>
                                  <button id=\\"signoff-deployment\\" className=\\"fe_c_button fe_c_button--primary fe_c_button--medium\\" aria-disabled={false} aria-label={[undefined]} onClick={[Function: handleClick]} type=\\"button\\">
                                    <div className=\\"fe_c_button__content\\">
                                      <span className=\\"fe_c_button__text fe_c_button__text--medium fe_c_button__text--primary\\">
                                        Verify
                                      </span>
                                    </div>
                                  </button>
                                </ForwardRef>
                              </SignoffDeployment>
                            </div>
                          </div>
                          <div className=\\"task-content\\">
                            <div className=\\"task-layout\\">
                               
                              <Table layout=\\"medium\\" className=\\"full-width\\" rows={{...}} rowKey=\\"deploymentId\\" columns={{...}} showHover={true} onRow={[Function: onRow]} replaceChildren={false} nowrapHeaders={false}>
                                <Provider className=\\"fe_c_table fe_c_table--show-hover fe_c_table--medium full-width\\" columns={{...}} renderers={{...}}>
                                  <table className=\\"fe_c_table fe_c_table--show-hover fe_c_table--medium full-width\\">
                                    <Header>
                                      <thead>
                                        <HeaderRow renderers={{...}} onRow={[Function: onRow]} rowData={{...}} rowIndex={0}>
                                          <tr>
                                            <th data-column=\\"id\\" scope=\\"col\\" role=\\"columnheader\\" title={{...}} className=\\"fe_c_table__header\\">
                                              id
                                            </th>
                                            <th data-column=\\"name\\" scope=\\"col\\" role=\\"columnheader\\" title={{...}} className=\\"fe_c_table__header\\">
                                              name
                                            </th>
                                            <th data-column=\\"taskTypeName\\" scope=\\"col\\" role=\\"columnheader\\" title={{...}} className=\\"fe_c_table__header\\">
                                              tasktype
                                            </th>
                                            <th data-column=\\"businessRequirementId\\" scope=\\"col\\" role=\\"columnheader\\" title={{...}} className=\\"fe_c_table__header\\">
                                              brid
                                            </th>
                                            <th data-column=\\"legacyRuleId\\" scope=\\"col\\" role=\\"columnheader\\" title={{...}} className=\\"fe_c_table__header\\">
                                              ruleappid
                                            </th>
                                          </tr>
                                        </HeaderRow>
                                      </thead>
                                    </Header>
                                    <Body onRow={[Function: onRow]} rows={{...}} rowKey=\\"deploymentId\\">
                                      <tbody>
                                        <BodyRow renderers={{...}} onRow={[Function: onRow]} rowKey=\\"0-row\\" rowIndex={0} rowData={{...}} columns={{...}}>
                                          <tr>
                                            <td data-column=\\"id\\" className=\\"fe_c_table__cell\\">
                                              <span className=\\"task-id-field\\">
                                                <Link className=\\"task-id-link\\" to=\\"/collector/workflowtool/tasks/535\\">
                                                  <LinkAnchor className=\\"task-id-link\\" href=\\"/collector/workflowtool/tasks/535\\" navigate={[Function: navigate]}>
                                                    <a className=\\"task-id-link\\" href=\\"/collector/workflowtool/tasks/535\\" onClick={[Function: onClick]}>
                                                      T-535
                                                    </a>
                                                  </LinkAnchor>
                                                </Link>
                                              </span>
                                            </td>
                                            <td data-column=\\"name\\" className=\\"fe_c_table__cell\\">
                                              Test Task  144
                                            </td>
                                            <td data-column=\\"taskTypeName\\" className=\\"fe_c_table__cell\\">
                                              Dual Update
                                            </td>
                                            <td data-column=\\"businessRequirementId\\" className=\\"fe_c_table__cell\\">
                                              <span className=\\"text-nowrap\\">
                                                BR-000085
                                              </span>
                                            </td>
                                            <td data-column=\\"legacyRuleId\\" className=\\"fe_c_table__cell\\">
                                              1.956
                                            </td>
                                          </tr>
                                        </BodyRow>
                                        <BodyRow renderers={{...}} onRow={[Function: onRow]} rowKey=\\"1-row\\" rowIndex={1} rowData={{...}} columns={{...}}>
                                          <tr>
                                            <td data-column=\\"id\\" className=\\"fe_c_table__cell\\">
                                              <span className=\\"task-id-field\\">
                                                <Link className=\\"task-id-link\\" to=\\"/collector/workflowtool/tasks/530\\">
                                                  <LinkAnchor className=\\"task-id-link\\" href=\\"/collector/workflowtool/tasks/530\\" navigate={[Function: navigate]}>
                                                    <a className=\\"task-id-link\\" href=\\"/collector/workflowtool/tasks/530\\" onClick={[Function: onClick]}>
                                                      T-530
                                                    </a>
                                                  </LinkAnchor>
                                                </Link>
                                              </span>
                                            </td>
                                            <td data-column=\\"name\\" className=\\"fe_c_table__cell\\">
                                              Test Task  139
                                            </td>
                                            <td data-column=\\"taskTypeName\\" className=\\"fe_c_table__cell\\">
                                              Business Requirement Update
                                            </td>
                                            <td data-column=\\"businessRequirementId\\" className=\\"fe_c_table__cell\\">
                                              <span className=\\"text-nowrap\\">
                                                BR-000085
                                              </span>
                                            </td>
                                            <td data-column=\\"legacyRuleId\\" className=\\"fe_c_table__cell\\">
                                              1.956
                                            </td>
                                          </tr>
                                        </BodyRow>
                                      </tbody>
                                    </Body>
                                  </table>
                                </Provider>
                              </Table>
                            </div>
                          </div>
                        </div>
                      </div>
                    </Transition>
                  </CSSTransition>
                </div>
              </li>
            </ListItem>
          </AccordionItem>
        </div>
      </DeploymentListDetail>
    </Router>
  </BrowserRouter>
</Provider>"
`;

exports[`test Deployment List Detail> should fill verify form and submit 1`] = `
"<Provider store={{...}}>
  <BrowserRouter>
    <Router history={{...}}>
      <DeploymentListDetail deploymentDetails={{...}} addSuccessToast={[Function: mockConstructor]} updateDeploymentDetails={[Function: mockConstructor]} handleDeploymentInprogressValidation={[Function: mockConstructor]}>
        <div className=\\"fe_u_padding--large\\">
          <AccordionItem headingText=\\"\\" padded={false} defaultExpanded={true} onExpandedChange={[Function: onExpandedChange]} headingTag=\\"h3\\" mountedWhileHidden={false} tabIndex={0}>
            <ListItem className=\\"fe_c_accordion-item fe_is-expanded\\">
              <li className=\\"fe_c_list__item fe_c_accordion-item fe_is-expanded\\">
                <div className=\\"fe_c_accordion-item__header fe_is-expanded\\" onClick={[Function: bound toggleExpand]} onKeyDown={[Function: onKeyDown]} aria-expanded={true} role=\\"button\\" tabIndex={0}>
                  <Icon icon=\\"Expand\\" title=\\"Collapse\\" aria-hidden=\\"true\\" focusable=\\"false\\" className=\\"fe_c_accordion-item__expand fe_is-expanded\\" iconSet={{...}}>
                    <Expand title=\\"Collapse\\" aria-hidden=\\"true\\" focusable=\\"false\\" className=\\"fe_c_accordion-item__expand fe_is-expanded\\">
                      <IconBase viewBox=\\"0 0 25 25\\" title=\\"Collapse\\" aria-hidden=\\"true\\" focusable=\\"false\\" className=\\"fe_c_accordion-item__expand fe_is-expanded\\">
                        <svg xmlns=\\"http://www.w3.org/2000/svg\\" aria-hidden=\\"true\\" focusable=\\"false\\" className=\\"fe_c_icon fe_c_accordion-item__expand fe_is-expanded\\" viewBox=\\"0 0 25 25\\" style={{...}}>
                          <title>
                            Collapse
                          </title>
                          <g>
                            <g className=\\"fe_c_icon__background\\">
                              <rect width=\\"25\\" height=\\"25\\" />
                            </g>
                            <g className=\\"fe_c_icon__icon fe_c_icon__icon--primary\\">
                              <polygon points=\\"12.5 16.6 6 10 7 9 12.5 14.4 18 9 19 10 12.5 16.6\\" />
                            </g>
                          </g>
                        </svg>
                      </IconBase>
                    </Expand>
                  </Icon>
                  <AccordionItemHeader>
                    <div className=\\"fe_c_accordion-item__header-content\\">
                      <div className=\\"custom-accordion-header\\">
                        <div className=\\"deployment-id\\">
                          <span className=\\"deployment-id-field\\">
                            <Link className=\\"deployment-id-link\\" to=\\"/collector/workflowtool/deployments/1\\">
                              <LinkAnchor className=\\"deployment-id-link\\" href=\\"/collector/workflowtool/deployments/1\\" navigate={[Function: navigate]}>
                                <a className=\\"deployment-id-link\\" href=\\"/collector/workflowtool/deployments/1\\" onClick={[Function: onClick]}>
                                  D-1
                                </a>
                              </LinkAnchor>
                            </Link>
                          </span>
                        </div>
                        <div className=\\"status\\">
                          <span>
                            <StatusTag className=\\" status_nowrap_no_transform status_3\\" text=\\"IN PROGRESS\\" secondary={false} color=\\"gray\\">
                              <span className=\\"fe_c_status-tag  status_nowrap_no_transform status_3 fe_c_status-tag--gray\\">
                                IN PROGRESS
                              </span>
                            </StatusTag>
                          </span>
                        </div>
                        <div className=\\"release-version\\">
                          2.0.2
                        </div>
                        <div className=\\"released-date\\">
                          03/21/2021
                        </div>
                        <div className=\\"released-by\\">
                          jcyril
                        </div>
                      </div>
                    </div>
                  </AccordionItemHeader>
                </div>
                <div className=\\"fe_c_accordion-item__content fe_is-expanded\\">
                  <CSSTransition in={true} classNames=\\"fe_is-expanding\\" timeout={400} onEnter={[Function: bound handleEnter]} onEntering={[Function: handleEntering]} onEntered={[Function: handleEntered]} onExit={[Function: handleExit]} onExiting={[Function: handleExiting]} onExited={[Function: bound handleExited]} mountOnEnter={true} unmountOnExit={true}>
                    <Transition in={true} timeout={400} onEnter={[Function (anonymous)]} onEntering={[Function (anonymous)]} onEntered={[Function (anonymous)]} onExit={[Function (anonymous)]} onExiting={[Function (anonymous)]} onExited={[Function (anonymous)]} mountOnEnter={true} unmountOnExit={true} appear={false} enter={true} exit={true}>
                      <div className=\\"fe_c_accordion-item__content-inner\\" style={{...}}>
                        <div className=\\"deployment-content\\">
                          <div className=\\"environment-layout\\">
                            <div>
                              <ul className=\\"environment-container\\">
                                <li className=\\"environment-section\\">
                                  <div className=\\"environment-name\\">
                                    Environment
                                    : 
                                    Prod-Mirror
                                  </div>
                                  <div className=\\"rule-app-version\\">
                                    Rule App version
                                    : 
                                    1.293
                                  </div>
                                </li>
                                <li className=\\"environment-section\\">
                                  <div className=\\"environment-name\\">
                                    Environment
                                    : 
                                    Prod-East
                                  </div>
                                  <div className=\\"rule-app-version\\">
                                    Rule App version
                                    : 
                                    1.294
                                  </div>
                                </li>
                                <li className=\\"environment-section\\">
                                  <div className=\\"environment-name\\">
                                    Environment
                                    : 
                                    Prod-West
                                  </div>
                                  <div className=\\"rule-app-version\\">
                                    Rule App version
                                    : 
                                    1.295
                                  </div>
                                </li>
                              </ul>
                            </div>
                            <div id=\\"button-container\\" className=\\"button-container\\">
                              <RejectDeployment onReject={[Function (anonymous)]}>
                                <ForwardRef className=\\"fe_u_margin--right-xsmall\\" id=\\"reject-deployment\\" text=\\"Reject\\" onClick={[Function (anonymous)]} variant=\\"primary\\" disabled={false} fullWidth={false} iconSet={{...}} size=\\"medium\\" showLoadingSpinner={false} type=\\"button\\" useLink={false}>
                                  <button id=\\"reject-deployment\\" className=\\"fe_c_button fe_c_button--primary fe_c_button--medium fe_u_margin--right-xsmall\\" aria-disabled={false} aria-label={[undefined]} onClick={[Function: handleClick]} type=\\"button\\">
                                    <div className=\\"fe_c_button__content\\">
                                      <span className=\\"fe_c_button__text fe_c_button__text--medium fe_c_button__text--primary\\">
                                        Reject
                                      </span>
                                    </div>
                                  </button>
                                </ForwardRef>
                              </RejectDeployment>
                              <SignoffDeployment deployResponse={{...}} onSignoff={[Function (anonymous)]}>
                                <ForwardRef id=\\"signoff-deployment\\" text=\\"Verify\\" onClick={[Function (anonymous)]} variant=\\"primary\\" disabled={false} fullWidth={false} iconSet={{...}} size=\\"medium\\" showLoadingSpinner={false} type=\\"button\\" useLink={false}>
                                  <button id=\\"signoff-deployment\\" className=\\"fe_c_button fe_c_button--primary fe_c_button--medium\\" aria-disabled={false} aria-label={[undefined]} onClick={[Function: handleClick]} type=\\"button\\">
                                    <div className=\\"fe_c_button__content\\">
                                      <span className=\\"fe_c_button__text fe_c_button__text--medium fe_c_button__text--primary\\">
                                        Verify
                                      </span>
                                    </div>
                                  </button>
                                </ForwardRef>
                                <Formik initialValues={{...}} validationSchema={{...}} onSubmit={[Function (anonymous)]} validateOnMount={false} validateOnBlur={false} validateOnChange={false}>
                                  <ThemeConsumerHOC show={true} hideDividers={true} headerText=\\"Verify deployment D-221\\" disableClose={true} width=\\"large\\" className=\\"my-custom-lightbox deployment-signoff\\">
                                    <Lightbox show={true} hideDividers={true} headerText=\\"Verify deployment D-221\\" disableClose={true} width=\\"large\\" className=\\"my-custom-lightbox deployment-signoff\\" theme={{...}} closeButtonAriaLabel=\\"Close Modal\\" includeButtonRow={false} primaryButtonText=\\"Next\\" padded={true}>
                                      <ModalManagerWrapper className=\\"fe_c_lightbox fe_f_all my-custom-lightbox deployment-signoff\\" dialogClass={{...}} onHide={[Function: handleOnHide]} aria-label=\\"Verify deployment D-221\\" show={true}>
                                        <Overlay manager={{...}} className=\\"fe_c_lightbox fe_f_all my-custom-lightbox deployment-signoff\\" dialogClass={{...}} onHide={[Function: handleOnHide]} aria-label=\\"Verify deployment D-221\\" show={true} autoFocus={false} enforceFocus={false}>
                                          <Modal aria-modal=\\"true\\" aria-labelledby={[undefined]} aria-describedby={[undefined]} renderBackdrop={[Function: renderBackdrop]} transition={[Function: FadeUp]} backdropTransition={[Function: Fade]} manager={{...}} onShow={[Function (anonymous)]} onHide={[Function: handleOnHide]} aria-label=\\"Verify deployment D-221\\" show={true} autoFocus={false} enforceFocus={false} className=\\"fe_c_overlay fe_f_all fe_c_lightbox fe_f_all my-custom-lightbox deployment-signoff\\" role=\\"dialog\\" backdrop={true} keyboard={true} restoreFocus={true}>
                                            <Portal container={[undefined]} onRendered={[Function (anonymous)]}>
                                              <WaitForContainer container={[undefined]} onContainerResolved={[Function (anonymous)]}>
                                                <Portal containerInfo={{...}}>
                                                  <Fade appear={true} in={true}>
                                                    <CSSTransition timeout={400} classNames=\\"fade\\" appear={true} in={true}>
                                                      <Transition timeout={400} appear={true} in={true} onEnter={[Function (anonymous)]} onEntered={[Function (anonymous)]} onEntering={[Function (anonymous)]} onExit={[Function (anonymous)]} onExiting={[Function (anonymous)]} onExited={[Function (anonymous)]} mountOnEnter={false} unmountOnExit={false} enter={true} exit={true}>
                                                        <div className=\\"fe_c_overlay__blocker \\" onClick={[Function (anonymous)]} />
                                                      </Transition>
                                                    </CSSTransition>
                                                  </Fade>
                                                  <FadeUp appear={true} unmountOnExit={true} in={true} onExit={[undefined]} onExiting={[undefined]} onExited={[Function (anonymous)]} onEnter={[undefined]} onEntering={[undefined]} onEntered={[undefined]}>
                                                    <CSSTransition timeout={400} classNames=\\"fade-up\\" appear={true} unmountOnExit={true} in={true} onExit={[undefined]} onExiting={[undefined]} onExited={[Function (anonymous)]} onEnter={[undefined]} onEntering={[undefined]} onEntered={[undefined]}>
                                                      <Transition timeout={400} appear={true} unmountOnExit={true} in={true} onExit={[Function (anonymous)]} onExiting={[Function (anonymous)]} onExited={[Function (anonymous)]} onEnter={[Function (anonymous)]} onEntering={[Function (anonymous)]} onEntered={[Function (anonymous)]} mountOnEnter={false} enter={true} exit={true}>
                                                        <div role=\\"dialog\\" aria-modal=\\"true\\" aria-labelledby={[undefined]} aria-describedby={[undefined]} aria-label=\\"Verify deployment D-221\\" style={[undefined]} className=\\"fe_c_overlay fe_f_all fe_c_lightbox fe_f_all my-custom-lightbox deployment-signoff\\" tabIndex=\\"-1\\">
                                                          <div className=\\"fe_c_overlay__dialog fe_c_lightbox__dialog fe_c_lightbox__dialog--large fe_c_lightbox__dialog--without-dividers\\" role=\\"document\\">
                                                            <div className=\\"fe_c_lightbox__header\\">
                                                              <Heading text=\\"Verify deployment D-221\\" headingTag=\\"h1\\" variant=\\"section\\">
                                                                <h1 className=\\"fe_c_heading fe_c_heading--section\\">
                                                                  Verify deployment D-221
                                                                </h1>
                                                              </Heading>
                                                            </div>
                                                            <div className=\\"fe_c_lightbox__body fe_c_lightbox__body--padded\\">
                                                              <ForwardRef variant=\\"tertiary\\" icon=\\"Close\\" onClick={[Function (anonymous)]} className=\\"my-close-button\\" disabled={false} fullWidth={false} iconSet={{...}} size=\\"medium\\" showLoadingSpinner={false} type=\\"button\\" useLink={false}>
                                                                <button className=\\"fe_c_button fe_c_button--tertiary fe_c_button--medium my-close-button\\" aria-disabled={false} aria-label=\\"Close\\" onClick={[Function: handleClick]} type=\\"button\\">
                                                                  <div className=\\"fe_c_button__content\\">
                                                                    <Close title={{...}} disabled={false} className=\\"fe_c_button__icon fe_c_button__icon--tertiary\\">
                                                                      <IconBase viewBox=\\"0 0 25 25\\" title={{...}} disabled={false} className=\\"fe_c_button__icon fe_c_button__icon--tertiary fe_c_icon--close\\">
                                                                        <svg xmlns=\\"http://www.w3.org/2000/svg\\" className=\\"fe_c_icon fe_c_button__icon fe_c_button__icon--tertiary fe_c_icon--close\\" viewBox=\\"0 0 25 25\\" style={{...}}>
                                                                          <g>
                                                                            <g className=\\"fe_c_icon__background\\">
                                                                              <rect width=\\"25\\" height=\\"25\\" />
                                                                            </g>
                                                                            <g className=\\"fe_c_icon__icon fe_c_icon__icon--primary\\">
                                                                              <rect x=\\"4\\" y=\\"11.8\\" width=\\"17\\" height=\\"1.5\\" transform=\\"translate(-5.2 12.5) rotate(-45)\\" />
                                                                              <rect x=\\"11.8\\" y=\\"4\\" width=\\"1.5\\" height=\\"16.97\\" transform=\\"translate(-5.2 12.5) rotate(-45)\\" />
                                                                            </g>
                                                                          </g>
                                                                        </svg>
                                                                      </IconBase>
                                                                    </Close>
                                                                  </div>
                                                                </button>
                                                              </ForwardRef>
                                                              <span>
                                                                T-535, T-530
                                                              </span>
                                                              <FormField inputAs={{...}} id=\\"signoff1\\" labelText=\\"\\" description=\\"The deployed version is available in US-EAST and US-WEST RES.\\" checked=\\"true\\" required={true} errorAlwaysBelow={true} name=\\"signoff1\\" value=\\"true\\" onChange={[Function (anonymous)]} onBlur={[Function (anonymous)]} error={[undefined]}>
                                                                <FormFieldLayout labelWidth={[undefined]} nested={[undefined]} layout={[undefined]} statusExtras=\\"fe_c_form-field__status--below\\" className=\\"\\" labelAlwaysAbove={[undefined]} labelSlot={{...}} messageSlot={[undefined]} statusIndicatorSlot={[undefined]} inputSlot={{...}}>
                                                                  <div className=\\"fe_c_form-field fe_c_form-field--medium\\">
                                                                    <GridRow nested={true}>
                                                                      <div className=\\"fe_l_grid-row fe_l_grid-row--nested\\">
                                                                        <GridCol width={{...}} className=\\"fe_c_form-field__label\\">
                                                                          <div className=\\"fe_l_grid-row__col fe_l_grid-row__col--small-12 fe_l_grid-row__col--medium-3 fe_c_form-field__label\\">
                                                                            <Label id=\\"signoff1-label\\" htmlFor={[undefined]} text=\\"\\" disabled={[undefined]} required={true} useLegend={false}>
                                                                              <label htmlFor={[undefined]} id=\\"signoff1-label\\" className=\\"fe_c_label\\" />
                                                                            </Label>
                                                                          </div>
                                                                        </GridCol>
                                                                        <GridCol width={{...}} className=\\"fe_c_form-field__right\\">
                                                                          <div className=\\"fe_l_grid-row__col fe_l_grid-row__col--small-12 fe_l_grid-row__col--medium-9 fe_c_form-field__right\\">
                                                                            <div className=\\"fe_c_form-field__input-slot\\">
                                                                              <Checkbox description=\\"The deployed version is available in US-EAST and US-WEST RES.\\" checked=\\"true\\" value=\\"true\\" onChange={[Function (anonymous)]} onBlur={[Function (anonymous)]} className=\\"fe_c_form-field__input\\" id=\\"signoff1\\" name=\\"signoff1\\" required={true} hideRequiredStyles={false} disabled={false} error={[undefined]} aria-labelledby=\\"signoff1-label\\">
                                                                                <span className=\\"fe_c_checkbox fe_is-required fe_c_form-field__input\\">
                                                                                  <input type=\\"checkbox\\" checked=\\"true\\" onChange={[Function (anonymous)]} onBlur={[Function (anonymous)]} name=\\"signoff1\\" className=\\"fe_c_checkbox__input\\" disabled={false} required={true} id=\\"signoff1\\" defaultChecked={[undefined]} aria-labelledby=\\"signoff1-label description-label-signoff1\\" value=\\"true\\" />
                                                                                  <Label htmlFor=\\"signoff1\\" className=\\"fe_c_checkbox__description fe_is-required\\" text=\\"The deployed version is available in US-EAST and US-WEST RES.\\" id=\\"description-label-signoff1\\" aria-label={[undefined]} required={false} useLegend={false}>
                                                                                    <label htmlFor=\\"signoff1\\" id=\\"description-label-signoff1\\" aria-label={[undefined]} className=\\"fe_c_label fe_c_checkbox__description fe_is-required\\">
                                                                                      The deployed version is available in US-EAST and US-WEST RES.
                                                                                    </label>
                                                                                  </Label>
                                                                                </span>
                                                                              </Checkbox>
                                                                            </div>
                                                                            <div className=\\"fe_c_form-field__status fe_c_form-field__status--below\\" />
                                                                          </div>
                                                                        </GridCol>
                                                                      </div>
                                                                    </GridRow>
                                                                  </div>
                                                                </FormFieldLayout>
                                                              </FormField>
                                                              <FormField inputAs={{...}} id=\\"signoff2\\" labelText=\\"\\" description=\\"Tested with sample request in both US-EAST and US-WEST RES.\\" checked=\\"true\\" required={true} errorAlwaysBelow={true} name=\\"signoff2\\" value=\\"true\\" onChange={[Function (anonymous)]} onBlur={[Function (anonymous)]} error={[undefined]}>
                                                                <FormFieldLayout labelWidth={[undefined]} nested={[undefined]} layout={[undefined]} statusExtras=\\"fe_c_form-field__status--below\\" className=\\"\\" labelAlwaysAbove={[undefined]} labelSlot={{...}} messageSlot={[undefined]} statusIndicatorSlot={[undefined]} inputSlot={{...}}>
                                                                  <div className=\\"fe_c_form-field fe_c_form-field--medium\\">
                                                                    <GridRow nested={true}>
                                                                      <div className=\\"fe_l_grid-row fe_l_grid-row--nested\\">
                                                                        <GridCol width={{...}} className=\\"fe_c_form-field__label\\">
                                                                          <div className=\\"fe_l_grid-row__col fe_l_grid-row__col--small-12 fe_l_grid-row__col--medium-3 fe_c_form-field__label\\">
                                                                            <Label id=\\"signoff2-label\\" htmlFor={[undefined]} text=\\"\\" disabled={[undefined]} required={true} useLegend={false}>
                                                                              <label htmlFor={[undefined]} id=\\"signoff2-label\\" className=\\"fe_c_label\\" />
                                                                            </Label>
                                                                          </div>
                                                                        </GridCol>
                                                                        <GridCol width={{...}} className=\\"fe_c_form-field__right\\">
                                                                          <div className=\\"fe_l_grid-row__col fe_l_grid-row__col--small-12 fe_l_grid-row__col--medium-9 fe_c_form-field__right\\">
                                                                            <div className=\\"fe_c_form-field__input-slot\\">
                                                                              <Checkbox description=\\"Tested with sample request in both US-EAST and US-WEST RES.\\" checked=\\"true\\" value=\\"true\\" onChange={[Function (anonymous)]} onBlur={[Function (anonymous)]} className=\\"fe_c_form-field__input\\" id=\\"signoff2\\" name=\\"signoff2\\" required={true} hideRequiredStyles={false} disabled={false} error={[undefined]} aria-labelledby=\\"signoff2-label\\">
                                                                                <span className=\\"fe_c_checkbox fe_is-required fe_c_form-field__input\\">
                                                                                  <input type=\\"checkbox\\" checked=\\"true\\" onChange={[Function (anonymous)]} onBlur={[Function (anonymous)]} name=\\"signoff2\\" className=\\"fe_c_checkbox__input\\" disabled={false} required={true} id=\\"signoff2\\" defaultChecked={[undefined]} aria-labelledby=\\"signoff2-label description-label-signoff2\\" value=\\"true\\" />
                                                                                  <Label htmlFor=\\"signoff2\\" className=\\"fe_c_checkbox__description fe_is-required\\" text=\\"Tested with sample request in both US-EAST and US-WEST RES.\\" id=\\"description-label-signoff2\\" aria-label={[undefined]} required={false} useLegend={false}>
                                                                                    <label htmlFor=\\"signoff2\\" id=\\"description-label-signoff2\\" aria-label={[undefined]} className=\\"fe_c_label fe_c_checkbox__description fe_is-required\\">
                                                                                      Tested with sample request in both US-EAST and US-WEST RES.
                                                                                    </label>
                                                                                  </Label>
                                                                                </span>
                                                                              </Checkbox>
                                                                            </div>
                                                                            <div className=\\"fe_c_form-field__status fe_c_form-field__status--below\\" />
                                                                          </div>
                                                                        </GridCol>
                                                                      </div>
                                                                    </GridRow>
                                                                  </div>
                                                                </FormFieldLayout>
                                                              </FormField>
                                                              <FormField id=\\"releaseVersion\\" labelWidth={1} labelText=\\"Release version\\" required={true} name=\\"releaseVersion\\" value=\\"2.1\\" onChange={[Function (anonymous)]} onBlur={[Function (anonymous)]} errorAlwaysBelow={true} error={[undefined]} inputAs={{...}}>
                                                                <FormFieldLayout labelWidth={1} nested={[undefined]} layout={[undefined]} statusExtras=\\"fe_c_form-field__status--below\\" className=\\"\\" labelAlwaysAbove={[undefined]} labelSlot={{...}} messageSlot={[undefined]} statusIndicatorSlot={[undefined]} inputSlot={{...}}>
                                                                  <div className=\\"fe_c_form-field fe_c_form-field--medium\\">
                                                                    <GridRow nested={true}>
                                                                      <div className=\\"fe_l_grid-row fe_l_grid-row--nested\\">
                                                                        <GridCol width={{...}} className=\\"fe_c_form-field__label\\">
                                                                          <div className=\\"fe_l_grid-row__col fe_l_grid-row__col--small-12 fe_l_grid-row__col--medium-1 fe_c_form-field__label\\">
                                                                            <Label id=\\"releaseVersion-label\\" htmlFor=\\"releaseVersion\\" text=\\"Release version\\" disabled={[undefined]} required={true} useLegend={false}>
                                                                              <label htmlFor=\\"releaseVersion\\" id=\\"releaseVersion-label\\" className=\\"fe_c_label\\">
                                                                                Release version
                                                                                <span className=\\"fe_c_label__required\\" aria-hidden=\\"true\\">
                                                                                   
                                                                                  - Required
                                                                                </span>
                                                                              </label>
                                                                            </Label>
                                                                          </div>
                                                                        </GridCol>
                                                                        <GridCol width={{...}} className=\\"fe_c_form-field__right\\">
                                                                          <div className=\\"fe_l_grid-row__col fe_l_grid-row__col--small-12 fe_l_grid-row__col--medium-11 fe_c_form-field__right\\">
                                                                            <div className=\\"fe_c_form-field__input-slot\\">
                                                                              <Input value=\\"2.1\\" onChange={[Function (anonymous)]} onBlur={[Function (anonymous)]} className=\\"fe_c_form-field__input\\" id=\\"releaseVersion\\" name=\\"releaseVersion\\" required={true} hideRequiredStyles={false} disabled={false} error={[undefined]} aria-labelledby=\\"releaseVersion-label\\" type=\\"text\\">
                                                                                <div className=\\"fe_c_input fe_c_form-field__input\\">
                                                                                  <input value=\\"2.1\\" onChange={[Function (anonymous)]} onBlur={[Function (anonymous)]} id=\\"releaseVersion\\" name=\\"releaseVersion\\" aria-labelledby=\\"releaseVersion-label\\" className=\\"fe_c_input__input fe_is-required\\" type=\\"text\\" disabled={false} required={true} />
                                                                                </div>
                                                                              </Input>
                                                                            </div>
                                                                            <div className=\\"fe_c_form-field__status fe_c_form-field__status--below\\" />
                                                                          </div>
                                                                        </GridCol>
                                                                      </div>
                                                                    </GridRow>
                                                                  </div>
                                                                </FormFieldLayout>
                                                              </FormField>
                                                              <div className=\\"fe_c_lightbox__footer\\">
                                                                <ForwardRef text=\\"Cancel\\" onClick={[Function (anonymous)]} variant=\\"secondary\\" className=\\"fe_u_margin--right-small\\" disabled={false} fullWidth={false} iconSet={{...}} size=\\"medium\\" showLoadingSpinner={false} type=\\"button\\" useLink={false}>
                                                                  <button className=\\"fe_c_button fe_c_button--secondary fe_c_button--medium fe_u_margin--right-small\\" aria-disabled={false} aria-label={[undefined]} onClick={[Function: handleClick]} type=\\"button\\">
                                                                    <div className=\\"fe_c_button__content\\">
                                                                      <span className=\\"fe_c_button__text fe_c_button__text--medium fe_c_button__text--secondary\\">
                                                                        Cancel
                                                                      </span>
                                                                    </div>
                                                                  </button>
                                                                </ForwardRef>
                                                                <ForwardRef text=\\"Verify\\" id=\\"verifySubmit\\" onClick={[Function (anonymous)]} variant=\\"primary\\" disabled={false} fullWidth={false} iconSet={{...}} size=\\"medium\\" showLoadingSpinner={false} type=\\"button\\" useLink={false}>
                                                                  <button id=\\"verifySubmit\\" className=\\"fe_c_button fe_c_button--primary fe_c_button--medium\\" aria-disabled={false} aria-label={[undefined]} onClick={[Function: handleClick]} type=\\"button\\">
                                                                    <div className=\\"fe_c_button__content\\">
                                                                      <span className=\\"fe_c_button__text fe_c_button__text--medium fe_c_button__text--primary\\">
                                                                        Verify
                                                                      </span>
                                                                    </div>
                                                                  </button>
                                                                </ForwardRef>
                                                              </div>
                                                            </div>
                                                          </div>
                                                        </div>
                                                      </Transition>
                                                    </CSSTransition>
                                                  </FadeUp>
                                                </Portal>
                                              </WaitForContainer>
                                            </Portal>
                                          </Modal>
                                        </Overlay>
                                      </ModalManagerWrapper>
                                    </Lightbox>
                                  </ThemeConsumerHOC>
                                </Formik>
                              </SignoffDeployment>
                            </div>
                          </div>
                          <div className=\\"task-content\\">
                            <div className=\\"task-layout\\">
                               
                              <Table layout=\\"medium\\" className=\\"full-width\\" rows={{...}} rowKey=\\"deploymentId\\" columns={{...}} showHover={true} onRow={[Function: onRow]} replaceChildren={false} nowrapHeaders={false}>
                                <Provider className=\\"fe_c_table fe_c_table--show-hover fe_c_table--medium full-width\\" columns={{...}} renderers={{...}}>
                                  <table className=\\"fe_c_table fe_c_table--show-hover fe_c_table--medium full-width\\">
                                    <Header>
                                      <thead>
                                        <HeaderRow renderers={{...}} onRow={[Function: onRow]} rowData={{...}} rowIndex={0}>
                                          <tr>
                                            <th data-column=\\"id\\" scope=\\"col\\" role=\\"columnheader\\" title={{...}} className=\\"fe_c_table__header\\">
                                              id
                                            </th>
                                            <th data-column=\\"name\\" scope=\\"col\\" role=\\"columnheader\\" title={{...}} className=\\"fe_c_table__header\\">
                                              name
                                            </th>
                                            <th data-column=\\"taskTypeName\\" scope=\\"col\\" role=\\"columnheader\\" title={{...}} className=\\"fe_c_table__header\\">
                                              tasktype
                                            </th>
                                            <th data-column=\\"businessRequirementId\\" scope=\\"col\\" role=\\"columnheader\\" title={{...}} className=\\"fe_c_table__header\\">
                                              brid
                                            </th>
                                            <th data-column=\\"legacyRuleId\\" scope=\\"col\\" role=\\"columnheader\\" title={{...}} className=\\"fe_c_table__header\\">
                                              ruleappid
                                            </th>
                                          </tr>
                                        </HeaderRow>
                                      </thead>
                                    </Header>
                                    <Body onRow={[Function: onRow]} rows={{...}} rowKey=\\"deploymentId\\">
                                      <tbody>
                                        <BodyRow renderers={{...}} onRow={[Function: onRow]} rowKey=\\"0-row\\" rowIndex={0} rowData={{...}} columns={{...}}>
                                          <tr>
                                            <td data-column=\\"id\\" className=\\"fe_c_table__cell\\">
                                              <span className=\\"task-id-field\\">
                                                <Link className=\\"task-id-link\\" to=\\"/collector/workflowtool/tasks/535\\">
                                                  <LinkAnchor className=\\"task-id-link\\" href=\\"/collector/workflowtool/tasks/535\\" navigate={[Function: navigate]}>
                                                    <a className=\\"task-id-link\\" href=\\"/collector/workflowtool/tasks/535\\" onClick={[Function: onClick]}>
                                                      T-535
                                                    </a>
                                                  </LinkAnchor>
                                                </Link>
                                              </span>
                                            </td>
                                            <td data-column=\\"name\\" className=\\"fe_c_table__cell\\">
                                              Test Task  144
                                            </td>
                                            <td data-column=\\"taskTypeName\\" className=\\"fe_c_table__cell\\">
                                              Dual Update
                                            </td>
                                            <td data-column=\\"businessRequirementId\\" className=\\"fe_c_table__cell\\">
                                              <span className=\\"text-nowrap\\">
                                                BR-000085
                                              </span>
                                            </td>
                                            <td data-column=\\"legacyRuleId\\" className=\\"fe_c_table__cell\\">
                                              1.956
                                            </td>
                                          </tr>
                                        </BodyRow>
                                        <BodyRow renderers={{...}} onRow={[Function: onRow]} rowKey=\\"1-row\\" rowIndex={1} rowData={{...}} columns={{...}}>
                                          <tr>
                                            <td data-column=\\"id\\" className=\\"fe_c_table__cell\\">
                                              <span className=\\"task-id-field\\">
                                                <Link className=\\"task-id-link\\" to=\\"/collector/workflowtool/tasks/530\\">
                                                  <LinkAnchor className=\\"task-id-link\\" href=\\"/collector/workflowtool/tasks/530\\" navigate={[Function: navigate]}>
                                                    <a className=\\"task-id-link\\" href=\\"/collector/workflowtool/tasks/530\\" onClick={[Function: onClick]}>
                                                      T-530
                                                    </a>
                                                  </LinkAnchor>
                                                </Link>
                                              </span>
                                            </td>
                                            <td data-column=\\"name\\" className=\\"fe_c_table__cell\\">
                                              Test Task  139
                                            </td>
                                            <td data-column=\\"taskTypeName\\" className=\\"fe_c_table__cell\\">
                                              Business Requirement Update
                                            </td>
                                            <td data-column=\\"businessRequirementId\\" className=\\"fe_c_table__cell\\">
                                              <span className=\\"text-nowrap\\">
                                                BR-000085
                                              </span>
                                            </td>
                                            <td data-column=\\"legacyRuleId\\" className=\\"fe_c_table__cell\\">
                                              1.956
                                            </td>
                                          </tr>
                                        </BodyRow>
                                      </tbody>
                                    </Body>
                                  </table>
                                </Provider>
                              </Table>
                            </div>
                          </div>
                        </div>
                      </div>
                    </Transition>
                  </CSSTransition>
                </div>
              </li>
            </ListItem>
          </AccordionItem>
        </div>
      </DeploymentListDetail>
    </Router>
  </BrowserRouter>
</Provider>"
`;
